# polyorb

./: .gitignore  Cargo.toml  README.md
data/: triangle01.frag  triangle01.vert
examples/: cube_example.rs  platonic.rs  polyhedron.rs  tetrahedron_demo.rs  triangle_demo.rs
shaders/: flat.frag  flat.vert  tetrahedron.frag  tetrahedron.vert  triangle01.frag  triangle01.vert  triangle02.frag  triangle02.vert  triangle03.frag  triangle03.vert
src/: cube.rs  cube_example.rs  geop.rs  input.rs  keyboard.rs  lib.rs  light.rs  main.rs  planar.rs  plane.rs  platonic_solid.rs  polyhedron.rs  presentation.rs  presenter.rs  scene.rs  shader.rs  shape.rs  show.rs  space.rs  tetrahedron.rs  triangle_example.rs
src/geop/: line.rs  plane.rs
src/platonic_solid/: cube.rs  dodecahedron.rs  icosahedron.rs  octahedron.rs  tetrahedron.rs
src/presentation/: camera.rs  show.rs
