[package]
name = "polyorb"
version = "0.0.0"
authors = ["Stephan Luther <kvsari@gmail.com>"]
edition = "2018"

[features]
default = ["wgpu/vulkan"]

[dependencies]
wgpu = "0.2.3"
log = "0.4.6"
glsl-to-spirv = "0.1"
cgmath = "0.17"
shaderc = "0.5.0"
enum-map = "0.5.0"
#winit = "0.19.1"

[dev-dependencies]
dotenv = "0.14.0"
env_logger = "0.6.1"
